--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
@@ -8,8 +11,7 @@
 
 <body>
   <div class="aaa">
-      <img src="./eisenhower-matrix.jpg"><a class="more_inf"
-      href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
+      <img src="./eisenhower-matrix.jpg"><a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
   </div>
   <div class="centered-main-page-element">
     <p id="top-section-for-adding-element-to-list"><label for="new-task">Add Item</label>
