--- a/index.html
+++ b/index.html
@@ -15,30 +15,37 @@
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="main-page">
-    <p id="add-item"><label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text"><button>Add</button>
+    <p id="add-item"><label class="lbl new-task" for="new-task">Add Item</label>
+      <div class="new-task-wrapper">
+          <input id="new-task" class="input-text task" type="text">
+          <button class="btn">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incomplete-tasks">
-        <li>
-            <input type="checkbox"><label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
+    <h3 class="text-title">Todo</h3>
+    <ul class="list" id="incomplete-tasks">
+        <li class="list-item">
+            <input class="input-checkbox" type="checkbox">
+            <label class="lbl task">Pay Bills</label>
+            <input type="text" class="input-text task">
+            <button class="btn edit">Edit</button>
+            <button class="btn delete"><img src="./remove.svg"></button>
         </li>
-        <li class="edit-mode">
-            <input type="checkbox"><label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button><button class="delete"><img src="./remove.svg"></button>
+        <li class="list-item edit-mode">
+            <input class="input-checkbox" type="checkbox">
+            <label class="lbl task">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="input-text task">
+            <button class="btn edit">Save</button>
+            <button class="btn delete"><img src="./remove.svg"></button>
         </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-        <li>
-            <input type="checkbox" checked><label class="task">See the Doctor</label>
-            <input type="text" class="task"><button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg"></button>
+    <h3 class="text-title">Completed</h3>
+    <ul class="list" id="completed-tasks">
+        <li class="list-item">
+            <input class="input-checkbox" type="checkbox" checked>
+            <label class="lbl task">See the Doctor</label>
+            <input type="text" class="input-text task">
+            <button class="btn edit">Edit</button>
+            <button class="btn delete"><img src="./remove.svg"></button>
         </li>
     </ul>
   </div>
