--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="eisenhower-matrix">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="Picture: Eisenhower matrix">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main>
@@ -33,14 +33,14 @@
                 <label class="lbl task">Pay Bills</label>
                 <input type="text" class="input-text task">
                 <button class="btn edit">Edit</button>
-                <button class="btn delete"><img src="./remove.svg"></button>
+                <button class="btn delete"><img src="./remove.svg" alt="Icon Del"></button>
             </li>
             <li class="list-item edit-mode">
                 <input class="input-checkbox" type="checkbox">
                 <label class="lbl task">Go Shopping</label>
                 <input type="text" value="Go Shopping" class="input-text task">
                 <button class="btn edit">Save</button>
-                <button class="btn delete"><img src="./remove.svg"></button>
+                <button class="btn delete"><img src="./remove.svg" alt="Icon Del"></button>
             </li>
         </ul>
       </section>
@@ -52,7 +52,7 @@
                 <label class="lbl task">See the Doctor</label>
                 <input type="text" class="input-text task">
                 <button class="btn edit">Edit</button>
-                <button class="btn delete"><img src="./remove.svg"></button>
+                <button class="btn delete"><img src="./remove.svg" alt="Icon Del"></button>
             </li>
         </ul>
       </section>
