--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="eisenhower-matrix">
-      <img src="../assets/images/eisenhower-matrix.jpg" alt="Picture: Eisenhower matrix">
+      <img class="pic" src="../assets/images/eisenhower-matrix.jpg" alt="Picture: Eisenhower matrix">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main>
@@ -20,7 +20,7 @@
         <h3 class="tasks__text-title">Add Item</h3>
         <p id="tasks__add-item">
           <div class="tasks__new-task-wrapper">
-              <input class="tasks__input-text task" id="new-task" type="text">
+              <input class="tasks__input-text task new-task__size" id="new-task" type="text">
               <button class="tasks__btn">Add</button>
           </div>
         </p>
@@ -33,14 +33,14 @@
                 <label class="tasks__lbl task">Pay Bills</label>
                 <input class="tasks__input-text task" type="text">
                 <button class="tasks__btn edit">Edit</button>
-                <button class="tasks__btn delete"><img src="../assets/icons/remove.svg" alt="Icon Del"></button>
+                <button class="tasks__btn delete"><img class="pic" src="../assets/icons/remove.svg" alt="Icon Del"></button>
             </li>
             <li class="tasks__list-item edit-mode">
                 <input class="tasks__input-checkbox" type="checkbox">
                 <label class="tasks__lbl task">Go Shopping</label>
                 <input class="tasks__input-text task" type="text" value="Go Shopping">
                 <button class="tasks__btn edit">Save</button>
-                <button class="tasks__btn delete"><img src="../assets/icons/remove.svg" alt="Icon Del"></button>
+                <button class="tasks__btn delete"><img class="pic"src="../assets/icons/remove.svg" alt="Icon Del"></button>
             </li>
         </ul>
       </section>
@@ -52,7 +52,7 @@
                 <label class="tasks__lbl task">See the Doctor</label>
                 <input class="tasks__input-text task" type="text">
                 <button class="tasks__btn edit">Edit</button>
-                <button class="tasks__btn delete"><img src="../assets/icons/remove.svg" alt="Icon Del"></button>
+                <button class="tasks__btn delete"><img class="pic" src="../assets/icons/remove.svg" alt="Icon Del"></button>
             </li>
         </ul>
       </section>
